optimise sensitivity analysis.

--- a/Papers/GPEM/ref.bib
+++ b/Papers/GPEM/ref.bib
@@ -1,3 +1,94 @@
+@inproceedings{Harman:2012:GCC:2351676.2351678,
+ author = {Harman, Mark and Langdon, William B. and Jia, Yue and White, David R. and Arcuri, Andrea and Clark, John A.},
+ title = {The GISMOE Challenge: Constructing the Pareto Program Surface Using Genetic Programming to Find Better Programs (Keynote Paper)},
+ booktitle = {Proceedings of the 27th IEEE/ACM International Conference on Automated Software Engineering},
+ series = {ASE 2012},
+ year = {2012},
+ isbn = {978-1-4503-1204-2},
+ location = {Essen, Germany},
+ pages = {1--14},
+ numpages = {14},
+ url = {http://doi.acm.org/10.1145/2351676.2351678},
+ doi = {10.1145/2351676.2351678},
+ acmid = {2351678},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Compilation, Genetic Programming, Non-functional Properties, Pareto Surface, SBSE, Search Based Optimization},
+} 
+
+@ARTICLE{6733370,
+author={Langdon, W.B. and Harman, M.},
+journal={Evolutionary Computation, IEEE Transactions on},
+title={Optimizing Existing Software With Genetic Programming},
+year={2015},
+volume={19},
+number={1},
+pages={118-135},
+keywords={genetic algorithms;software engineering;GIP;GISMOE;genetic improvement of programs;genetic improvement of software for multiple objective exploration;genetic programming;software optimization;Complexity theory;DNA;Genetic programming;Grammar;Semantics;Software;${rm Bowtie2}^{GP}$;Automatic software reengineering;genetic programming (GP);multiple objective exploration;search based software engineering (SBSE)},
+doi={10.1109/TEVC.2013.2281544},
+ISSN={1089-778X},
+month={Feb},}
+
+@ARTICLE{6035728,
+author={Le Goues, C. and ThanhVu Nguyen and Forrest, S. and Weimer, W.},
+journal={Software Engineering, IEEE Transactions on},
+title={GenProg: A Generic Method for Automatic Software Repair},
+year={2012},
+volume={38},
+number={1},
+pages={54-72},
+keywords={formal specification;genetic algorithms;software maintenance;GenProg;automatic software repair;defects repair;formal specifications;genetic programming;legacy programs;program annotations;special coding practices;Automatic programming;Computer bugs;Debugging;Encoding;Maintenance engineering;Syntactics;Automatic programming;corrections;testing and debugging.},
+doi={10.1109/TSE.2011.104},
+ISSN={0098-5589},
+month={Jan},}
+
+@incollection{geneticimprovementJP,
+year={2013},
+isbn={978-3-642-39741-7},
+booktitle={Search Based Software Engineering},
+volume={8084},
+series={Lecture Notes in Computer Science},
+editor={Ruhe, Günther and Zhang, Yuanyuan},
+doi={10.1007/978-3-642-39742-4\_21},
+title={Applying Genetic Improvement to MiniSAT},
+url={http://dx.doi.org/10.1007/978-3-642-39742-4\_21},
+keywords={Genetic Improvement; GISMOE; SAT},
+author={Petke, Justyna and Langdon, WilliamB. and Harman, Mark},
+language={English}
+}
+
+@inproceedings{Wu:2015:DPO:2739480.2754648,
+ author = {Wu, Fan and Weimer, Westley and Harman, Mark and Jia, Yue and Krinke, Jens},
+ title = {Deep Parameter Optimisation},
+ booktitle = {Proceedings of the 2015 Annual Conference on Genetic and Evolutionary Computation},
+ series = {GECCO '15},
+ year = {2015},
+ isbn = {978-1-4503-3472-3},
+ location = {Madrid, Spain},
+ pages = {1375--1382},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/2739480.2754648},
+ doi = {10.1145/2739480.2754648},
+ acmid = {2754648},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {memory allocation, parameter exposure, parameter tuning},
+} 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @incollection{arcuri-ssbse-2011,
 year={2011},
 isbn={978-3-642-23715-7},
@@ -238,20 +329,6 @@ author={Katagiri, Takahiro and Kise, Kenji and Honda, Hiroaki and Yuba, Toshitsu
   note = {http://g.oswego.edu/dl/html/malloc.html}
 }
 
-@incollection{geneticimprovementJP,
-year={2013},
-isbn={978-3-642-39741-7},
-booktitle={Search Based Software Engineering},
-volume={8084},
-series={Lecture Notes in Computer Science},
-editor={Ruhe, Günther and Zhang, Yuanyuan},
-doi={10.1007/978-3-642-39742-4_21},
-title={Applying Genetic Improvement to MiniSAT},
-url={http://dx.doi.org/10.1007/978-3-642-39742-4_21},
-keywords={Genetic Improvement; GISMOE; SAT},
-author={Petke, Justyna and Langdon, WilliamB. and Harman, Mark},
-language={English}
-}
 
 @article{RiscoMartin2010572,
 title = "A parallel evolutionary algorithm to optimize dynamic memory managers in embedded systems ",
