--- a/Papers/GPEM/template.tex
+++ b/Papers/GPEM/template.tex
@@ -46,6 +46,7 @@ grestore
 \smartqed  % flush right qed marks, e.g. at end of proof
 %
 \usepackage{graphicx}
+\usepackage[numbers]{natbib}
 %
 % \usepackage{mathptmx}      % use Times fonts if available on your TeX system
 %
@@ -103,7 +104,11 @@ We find that: zeller numbers go here.
 
 \section{Introduction}
 \label{sec_intro}
-Your text comes here. Separate text sections with
+
+Optimising softwares for better performance such as speed and memory consumption can be demanding, especially when the resources in the running environment is limited.
+Manually optimising the performance while keeping/improving the functional behavior of a software is challenging, 
+and even harder if there are non-functional properties competing with each other~\cite{Harman:2012:GCC:2351676.2351678}.
+Previous studies have applied Genetic Programming and other techniques to automate this optimisation process~\cite{6035728, geneticimprovementJP, Wu:2015:DPO:2739480.2754648}.
 
 
 \section{Background}
