--- a/Papers/SSBSE/homi.tex
+++ b/Papers/SSBSE/homi.tex
@@ -22,7 +22,7 @@
 
 \begin{abstract}
 Automation has been applied to software improvement in many ways.
-However, it suffers from the dilemma between scalability and granularity.
+However, it suffers from the dilemma of scalability and granularity.
 We propose to use equivalent Higher Order Mutants to improve multiple non-functional properties of a software while the functional behavior is preserved.
 We find that: zeller numbers go here.
 %\keywords{Genetic Improvement \and SBSE \and Higher Order Mutation}
@@ -43,6 +43,26 @@ Previous studies have applied Genetic Programming and other techniques to automa
 \section{Method}
 \label{sec_method}
 
+\subsection{Sensitivity Analysis}
+\label{sec_sensitivity}
+
+\subsection{Higher Order Mutation}
+\label{sec_hom}
+
+\subsection{Research Questions}
+\label{sec_rqs}
+In this paper, we are interested in the following Research Questions.
+
+\begin{enumerate}
+\item[RQ1] How much can mutants improve the program performance in terms of time and memory consumption?
+ \begin{enumerate}
+\item[RQ1.1] First nested item
+\item[RQ1.2] Second nested item
+\end{enumerate}
+\item[RQ2] Second item
+\item[RQ3] Third item
+\end{enumerate}
+
 \section{Experiment}
 \label{sec_exp}
 
@@ -58,6 +78,7 @@ Previous studies have applied Genetic Programming and other techniques to automa
 \section{Conclusion}
 \label{sec_conclusion}
 
+\bibliographystyle{splncs03}
 \bibliography{ref.bib}   
 
 \end{document}
